# beam-go-bazel-example

./: .gitignore  BUILD.bazel  LICENSE  README.fail1.md  README.md  WORKSPACE  go.mod  go.sum  maven_install.json  workspace_go_deps.bzl
beamgen/: BUILD.bazel  beamgen.go
cmd/example_pipeline/: BUILD.bazel  example1.go  main.go
flink-conf/: flink-conf.yaml
tfrecordio/: BUILD.bazel  tfrecordio.go
tfrecordio/tfrecord/: BUILD.bazel  tfrecord.go  tfrecord_reader.go  tfrecord_utils.go  tfrecord_writer.go
