load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//:__subpackages__"])

# gazelle:prefix github.com/gonzojive/beam-go-bazel-example

# gazelle:exclude node_modules

# gazelle:resolve go go github.com/apache/beam/sdks/go/pkg/beam @com_github_apache_beam_sdks_v2//go/pkg/beam:go_default_library
# gazelle:resolve go github.com/apache/beam/sdks/go/pkg/beam/core/runtime/graphx/schema @com_github_apache_beam_sdks_v2//go/pkg/beam/core/runtime/graphx/schema:schema
# gazelle:resolve go github.com/apache/beam/sdks/go/pkg/beam/core/runtime @com_github_apache_beam_sdks_v2//go/pkg/beam/core/runtime:runtime
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=workspace_go_deps.bzl%gazelle_managed_go_repositories",
        #"-prune",
    ],
    command = "update-repos",
)

# ts_library uses the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//web:tsconfig.json",
)

java_binary(
    name = "flink-job-server-driver",
    main_class = "org.apache.beam.runners.flink.FlinkJobServerDriver",
    runtime_deps = [
        # Obtained by looking at results of
        # bazel query @maven//...
        "@maven//:org_apache_beam_beam_runners_flink_1_14",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
        "@maven//:org_apache_flink_flink_runtime_web_2_12",
    ],
)
